# volto-epics-demo

./: docker-compose.yml
camunda/: Dockerfile  docker-entrypoint.sh  docker.yml  pom.xml
camunda/app/: README.md  pom.xml
camunda/app/src/main/java/com/example/camunda/: CamundaApplication.java  CamundaApplicationConfiguration.java
camunda/app/src/main/resources/: application.yaml  world-plone-day-new-event.bpmn  world-plone-day.bpmn
nix/: default.nix  sources.json
process-api/: .gitignore  CHANGELOG.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  default.nix  requirements-python39.nix  requirements-python39.txt  requirements.txt  setup.cfg  setup.nix  shell.nix
process-api/src/process_api/: __init__.py  config.py  events.py  main.py  types.py  utils.py  variables.py  worker.py
process-api/src/process_api/camunda/: Makefile  __init__.py  camunda.json  types.py  utils.py
process-api/src/process_api/health/: __init__.py  config.py  routes.py  state.py  tasks.py  types.py
process-api/src/process_api/portal/: __init__.py  config.py  routes.py  tasks.py  types.py
process-api/src/process_api/process/: __init__.py  config.py  routes.py  tasks.py  types.py
process-api/stubs/pytest_mock/: __init__.pyi  _version.pyi
process-api/tests/: test_smoketest.py
volto/: .eslintrc.js  .gitignore  Dockerfile  jsconfig.json  package-lock.json  package.json
volto/src/: config.js  routes.js
volto/src/addons/volto-epics-addon/: package.json
volto/src/addons/volto-epics-addon/src/: constants.js  helpers.js  icons.js  index.js
volto/src/addons/volto-epics-addon/src/components/theme/ButtonLink/: ButtonLink.jsx  style.css
volto/src/addons/volto-epics-addon/src/components/theme/Epics/: ContinuationPollPage.jsx  ContinuationStatus.jsx  ContinuationToast.jsx  UnexpectedErrorPage.jsx
volto/src/addons/volto-epics-addon/src/middleware/: cancel.js  complete.js  continuation.js  healthz.js  helpers.js  index.js  message.js  raise.js  start.js  task.js
volto/src/components/: EventFormPage.jsx  ThanksPage.jsx  TimeoutPage.jsx  WPDController.jsx  WelcomePage.jsx
volto/src/constants/: index.js
