[metadata]
name = process-api
version = 0.1.0
description =
long_description = file: README.rst, CHANGELOG.rst
author = Asko Soukka
author_email = asko.soukka@iki.fi
url = https://github.com/datakurre/volto-epics-demo
classifiers =
    License :: OSI Approved :: European Union Public License 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3
license = EUPL-1.2

[options]
setup_requires =
    pytest-runner
install_requires =
    aiohttp
    fastapi
    pydantic
    setuptools
tests_require =
    requests
    pytest
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src

[aliases]
test = pytest

[tool:pytest]
norecursedirs = node_modules

[isort]
force_alphabetical_sort_within_sections = True
force_single_line = True
from_first = True
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = True

[mypy]
plugins = pydantic.mypy

[mypy-pygelf]
ignore_missing_imports = True

[pylama]
linters = pycodestyle,pydocstyle,pyflakes,pylint
ignore = C0103,C0301,C0330,C0411,D202,D203,D213,E501,E1101,R0205,R0902,R0903,R0913,R1716,W0511,E1136

# C0103 - Allow camelCase naming to allow typing API responses.
# C0301 - Enforcing line length when using black makes little sense.
# C0330 - This is a pylint bug and incompatible with black.
# C0441 - Enforcing import order when using isort makes little sense.
#  D202 - Black prefer newlines after a function docstring.
#  D203 - Black prefer newlines after a class docstring.
#  D213 - Black prefer newlines after a multiline docstring summary.
#  E501 - Enforcing line length when using black makes little sense.
# E1101 - Pylint cannot always see Pydantic instance member. Use MyPy instead.
# R0205 - Do not enforce to support Python 2.7.
# R0902 - Do not limit the amount of instance attributes to allow typing API responses.
# R0903 - Do not enforce public methods, because classes may be types.
# R0913 - Do not enforce argument limit, because Fastapi injections.
# R1716 - Allow complex chained comparison between the operands.
# W0511 - Allow TODO.

# E1136 - Requires pylint > 2.6.0 on Python 3

[pylama:**/__init__.py]
ignore = W0611

# W0611 - Enforcing unused imports in module __init__ makes little sense.

[pylama:tests/*.py]
ignore = C0111,D103

# C0111 - Enforcing docstrings for tests might be harmful.
# D103 - Enforcing docstrings for tests might be harmful.

### Do not lint generated modules:

[pylama:**/types/camunda.py]
ignore = D100,D101,D106,C0114,C0115,C0302,R0903,W0107

[pylama:**/types/signicat.py]
ignore = D100,D101,D106,C0114,C0115,C0302,R0903,W0107
